Removed guava dependency (#186)