@@ -1,7 +1,5 @@
 package seatsio.charts;
 
-import com.google.common.collect.ImmutableMap;
-import com.google.common.collect.Lists;
 import org.junit.jupiter.api.Test;
 import seatsio.SeatsioClientTest;
 
@@ -53,7 +51,7 @@ public class CreateChartTest extends SeatsioClientTest {
 
     @Test
     public void categories() {
-        List<Category> categories = Lists.newArrayList(
+        List<Category> categories = List.of(
                 new Category(1L, "Category 1", "#aaaaaa"),
                 new Category("anotherCat", "Category 2", "#bbbbbb", true)
         );
@@ -63,8 +61,8 @@ public class CreateChartTest extends SeatsioClientTest {
         Map<?, ?> drawing = client.charts.retrievePublishedVersion(chart.key);
         assertThat(drawing.get("venueType")).isEqualTo("MIXED");
         assertThat(categories(drawing)).containsExactly(
-                ImmutableMap.of("key", 1.0, "label", "Category 1", "color", "#aaaaaa", "accessible", false),
-                ImmutableMap.of("key", "anotherCat", "label", "Category 2", "color", "#bbbbbb", "accessible", true)
+                Map.of("key", 1.0, "label", "Category 1", "color", "#aaaaaa", "accessible", false),
+                Map.of("key", "anotherCat", "label", "Category 2", "color", "#bbbbbb", "accessible", true)
         );
     }
 
