@@ -1,20 +1,18 @@
 package seatsio.charts;
 
-import com.google.common.collect.ImmutableMap;
 import org.junit.jupiter.api.Test;
 import seatsio.SeatsioClientTest;
 
 import java.util.List;
 import java.util.Map;
 
-import static com.google.common.collect.Lists.newArrayList;
 import static org.assertj.core.api.Assertions.assertThat;
 
 public class UpdateChartTest extends SeatsioClientTest {
 
     @Test
     public void name() {
-        List<Category> categories = newArrayList(
+        List<Category> categories = List.of(
                 new Category(CategoryKey.of(1L), "Category 1", "#aaaaaa")
         );
 
@@ -27,14 +25,14 @@ public class UpdateChartTest extends SeatsioClientTest {
         Map<?, ?> drawing = client.charts.retrievePublishedVersion(retrievedChart.key);
         assertThat(drawing.get("venueType")).isEqualTo("BOOTHS");
         assertThat(categories(drawing)).containsExactly(
-                ImmutableMap.of("key", 1.0, "label", "Category 1", "color", "#aaaaaa", "accessible", false)
+                Map.of("key", 1.0, "label", "Category 1", "color", "#aaaaaa", "accessible", false)
         );
     }
 
     @Test
     public void categories() {
         Chart chart = client.charts.create("aChart", "BOOTHS", null);
-        List<Category> categories = newArrayList(
+        List<Category> categories = List.of(
                 new Category(CategoryKey.of(1L), "Category 1", "#aaaaaa"),
                 new Category(CategoryKey.of("anotherCat"), "Category 2", "#bbbbbb", true)
         );
@@ -46,8 +44,8 @@ public class UpdateChartTest extends SeatsioClientTest {
         Map<?, ?> drawing = client.charts.retrievePublishedVersion(retrievedChart.key);
         assertThat(drawing.get("venueType")).isEqualTo("BOOTHS");
         assertThat(categories(drawing)).containsExactly(
-                ImmutableMap.of("key", 1.0, "label", "Category 1", "color", "#aaaaaa", "accessible", false),
-                ImmutableMap.of("key", "anotherCat", "label", "Category 2", "color", "#bbbbbb", "accessible", true)
+                Map.of("key", 1.0, "label", "Category 1", "color", "#aaaaaa", "accessible", false),
+                Map.of("key", "anotherCat", "label", "Category 2", "color", "#bbbbbb", "accessible", true)
         );
     }
 
