@@ -1,11 +1,12 @@
 package seatsio.events;
 
-import com.google.common.collect.ImmutableMap;
 import org.junit.jupiter.api.Test;
 import seatsio.SeatsioClientTest;
 import seatsio.holdTokens.HoldToken;
 
-import static com.google.common.collect.Lists.newArrayList;
+import java.util.List;
+import java.util.Map;
+
 import static org.assertj.core.api.Assertions.assertThat;
 import static seatsio.events.EventObjectInfo.FREE;
 
@@ -27,11 +28,11 @@ public class RetrieveEventObjectInfoTest extends SeatsioClientTest {
         String chartKey = createTestChart();
         Event event = client.events.create(chartKey);
         HoldToken holdToken = client.holdTokens.create();
-        client.events.hold(event.key, newArrayList("GA1"), holdToken.holdToken);
+        client.events.hold(event.key, List.of("GA1"), holdToken.holdToken);
 
         EventObjectInfo objectInfo = client.events.retrieveObjectInfo(event.key, "GA1");
 
-        assertThat(objectInfo.holds).isEqualTo(ImmutableMap.of(holdToken.holdToken, ImmutableMap.of("NO_TICKET_TYPE", 1)));
+        assertThat(objectInfo.holds).isEqualTo(Map.of(holdToken.holdToken, Map.of("NO_TICKET_TYPE", 1)));
     }
 
 }
