@@ -1,6 +1,5 @@
 package seatsio.reports.charts;
 
-import com.google.common.collect.ImmutableMap;
 import org.junit.jupiter.api.Test;
 import seatsio.SeatsioClientTest;
 
@@ -23,15 +22,15 @@ public abstract class AbstractChartReportsSummaryTest extends SeatsioClientTest 
 
         ChartReportSummaryItem seatReport = aChartReportSummaryItem()
                 .withCount(32)
-                .withBySection(ImmutableMap.of(NO_SECTION, 32))
-                .withByCategoryKey(ImmutableMap.of("9", 16, "10", 16))
-                .withByCategoryLabel(ImmutableMap.of("Cat1", 16, "Cat2", 16))
+                .withBySection(Map.of(NO_SECTION, 32))
+                .withByCategoryKey(Map.of("9", 16, "10", 16))
+                .withByCategoryLabel(Map.of("Cat1", 16, "Cat2", 16))
                 .build();
         ChartReportSummaryItem generalAdmissionReport = aChartReportSummaryItem()
                 .withCount(200)
-                .withBySection(ImmutableMap.of(NO_SECTION, 200))
-                .withByCategoryKey(ImmutableMap.of("9", 100, "10", 100))
-                .withByCategoryLabel(ImmutableMap.of("Cat1", 100, "Cat2", 100))
+                .withBySection(Map.of(NO_SECTION, 200))
+                .withByCategoryKey(Map.of("9", 100, "10", 100))
+                .withByCategoryLabel(Map.of("Cat1", 100, "Cat2", 100))
                 .build();
         ChartReportSummaryItem emptyReport = aChartReportSummaryItem()
                 .withCount(0)
@@ -40,7 +39,7 @@ public abstract class AbstractChartReportsSummaryTest extends SeatsioClientTest 
                 .withByCategoryLabel(new HashMap<>())
                 .build();
 
-        assertThat(report).isEqualTo(ImmutableMap.of(
+        assertThat(report).isEqualTo(Map.of(
                 "seat", seatReport,
                 "generalAdmission", generalAdmissionReport,
                 "booth", emptyReport,
@@ -56,9 +55,9 @@ public abstract class AbstractChartReportsSummaryTest extends SeatsioClientTest 
 
         ChartReportSummaryItem tablesReport = aChartReportSummaryItem()
                 .withCount(2)
-                .withBySection(ImmutableMap.of(NO_SECTION, 2))
-                .withByCategoryKey(ImmutableMap.of("9", 2))
-                .withByCategoryLabel(ImmutableMap.of("Cat1", 2))
+                .withBySection(Map.of(NO_SECTION, 2))
+                .withByCategoryKey(Map.of("9", 2))
+                .withByCategoryLabel(Map.of("Cat1", 2))
                 .build();
         ChartReportSummaryItem emptyReport = aChartReportSummaryItem()
                 .withCount(0)
@@ -67,7 +66,7 @@ public abstract class AbstractChartReportsSummaryTest extends SeatsioClientTest 
                 .withByCategoryLabel(new HashMap<>())
                 .build();
 
-        assertThat(report).isEqualTo(ImmutableMap.of(
+        assertThat(report).isEqualTo(Map.of(
                 "seat", emptyReport,
                 "generalAdmission", emptyReport,
                 "booth", emptyReport,
@@ -83,13 +82,13 @@ public abstract class AbstractChartReportsSummaryTest extends SeatsioClientTest 
 
         ChartReportSummaryItem cat9Report = aChartReportSummaryItem()
                 .withCount(116)
-                .withBySection(ImmutableMap.of(NO_SECTION, 116))
-                .withByObjectType(ImmutableMap.of("seat", 16, "generalAdmission", 100))
+                .withBySection(Map.of(NO_SECTION, 116))
+                .withByObjectType(Map.of("seat", 16, "generalAdmission", 100))
                 .build();
         ChartReportSummaryItem cat10Report = aChartReportSummaryItem()
                 .withCount(116)
-                .withBySection(ImmutableMap.of(NO_SECTION, 116))
-                .withByObjectType(ImmutableMap.of("seat", 16, "generalAdmission", 100))
+                .withBySection(Map.of(NO_SECTION, 116))
+                .withByObjectType(Map.of("seat", 16, "generalAdmission", 100))
                 .build();
         ChartReportSummaryItem noCategoryReport = aChartReportSummaryItem()
                 .withCount(0)
@@ -102,7 +101,7 @@ public abstract class AbstractChartReportsSummaryTest extends SeatsioClientTest 
                 .withByObjectType(new HashMap<>())
                 .build();
 
-        assertThat(report).isEqualTo(ImmutableMap.of(
+        assertThat(report).isEqualTo(Map.of(
                 "9", cat9Report,
                 "10", cat10Report,
                 "string11", cat11Report,
@@ -118,13 +117,13 @@ public abstract class AbstractChartReportsSummaryTest extends SeatsioClientTest 
 
         ChartReportSummaryItem cat1Report = aChartReportSummaryItem()
                 .withCount(116)
-                .withBySection(ImmutableMap.of(NO_SECTION, 116))
-                .withByObjectType(ImmutableMap.of("seat", 16, "generalAdmission", 100))
+                .withBySection(Map.of(NO_SECTION, 116))
+                .withByObjectType(Map.of("seat", 16, "generalAdmission", 100))
                 .build();
         ChartReportSummaryItem cat2Report = aChartReportSummaryItem()
                 .withCount(116)
-                .withBySection(ImmutableMap.of(NO_SECTION, 116))
-                .withByObjectType(ImmutableMap.of("seat", 16, "generalAdmission", 100))
+                .withBySection(Map.of(NO_SECTION, 116))
+                .withByObjectType(Map.of("seat", 16, "generalAdmission", 100))
                 .build();
         ChartReportSummaryItem cat3Report = aChartReportSummaryItem()
                 .withCount(0)
@@ -137,7 +136,7 @@ public abstract class AbstractChartReportsSummaryTest extends SeatsioClientTest 
                 .withByObjectType(new HashMap<>())
                 .build();
 
-        assertThat(report).isEqualTo(ImmutableMap.of(
+        assertThat(report).isEqualTo(Map.of(
                 "Cat1", cat1Report,
                 "Cat2", cat2Report,
                 "Cat3", cat3Report,
@@ -152,12 +151,12 @@ public abstract class AbstractChartReportsSummaryTest extends SeatsioClientTest 
 
         ChartReportSummaryItem noSectionReport = aChartReportSummaryItem()
                 .withCount(232)
-                .withByCategoryKey(ImmutableMap.of("9", 116, "10", 116))
-                .withByCategoryLabel(ImmutableMap.of("Cat1", 116, "Cat2", 116))
-                .withByObjectType(ImmutableMap.of("seat", 32, "generalAdmission", 200))
+                .withByCategoryKey(Map.of("9", 116, "10", 116))
+                .withByCategoryLabel(Map.of("Cat1", 116, "Cat2", 116))
+                .withByObjectType(Map.of("seat", 32, "generalAdmission", 200))
                 .build();
 
-        assertThat(report).isEqualTo(ImmutableMap.of(NO_SECTION, noSectionReport));
+        assertThat(report).isEqualTo(Map.of(NO_SECTION, noSectionReport));
     }
 
 
