@@ -1,6 +1,5 @@
 package seatsio.reports.events;
 
-import com.google.common.collect.ImmutableMap;
 import org.junit.jupiter.api.Test;
 import seatsio.SeatsioClientTest;
 import seatsio.events.Channel;
@@ -10,9 +9,8 @@ import seatsio.events.Event;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
+import java.util.Set;
 
-import static com.google.common.collect.Lists.newArrayList;
-import static com.google.common.collect.Sets.newHashSet;
 import static org.assertj.core.api.Assertions.assertThat;
 import static seatsio.events.EventObjectInfo.*;
 import static seatsio.reports.events.EventReportSummaryItemBuilder.anEventReportSummaryItem;
@@ -23,29 +21,29 @@ public class EventReportsSummaryTest extends SeatsioClientTest {
     public void summaryByStatus() {
         String chartKey = createTestChart();
         Event event = client.events.create(chartKey);
-        client.events.book(event.key, newArrayList("A-1"));
+        client.events.book(event.key, List.of("A-1"));
 
         Map<String, EventReportSummaryItem> report = client.eventReports.summaryByStatus(event.key);
 
         EventReportSummaryItem bookedReport = anEventReportSummaryItem()
                 .withCount(1)
-                .withBySection(ImmutableMap.of(NO_SECTION, 1))
-                .withByCategoryKey(ImmutableMap.of("9", 1))
-                .withByCategoryLabel(ImmutableMap.of("Cat1", 1))
-                .withByAvailability(ImmutableMap.of(NOT_AVAILABLE, 1))
-                .withByAvailabilityReason(ImmutableMap.of(BOOKED, 1))
-                .withByChannel(ImmutableMap.of(NO_CHANNEL, 1))
+                .withBySection(Map.of(NO_SECTION, 1))
+                .withByCategoryKey(Map.of("9", 1))
+                .withByCategoryLabel(Map.of("Cat1", 1))
+                .withByAvailability(Map.of(NOT_AVAILABLE, 1))
+                .withByAvailabilityReason(Map.of(BOOKED, 1))
+                .withByChannel(Map.of(NO_CHANNEL, 1))
                 .build();
         EventReportSummaryItem freeReport = anEventReportSummaryItem()
                 .withCount(231)
-                .withBySection(ImmutableMap.of(NO_SECTION, 231))
-                .withByCategoryKey(ImmutableMap.of("9", 115, "10", 116))
-                .withByCategoryLabel(ImmutableMap.of("Cat1", 115, "Cat2", 116))
-                .withByAvailability(ImmutableMap.of(AVAILABLE, 231))
-                .withByAvailabilityReason(ImmutableMap.of(AVAILABLE, 231))
-                .withByChannel(ImmutableMap.of(NO_CHANNEL, 231))
+                .withBySection(Map.of(NO_SECTION, 231))
+                .withByCategoryKey(Map.of("9", 115, "10", 116))
+                .withByCategoryLabel(Map.of("Cat1", 115, "Cat2", 116))
+                .withByAvailability(Map.of(AVAILABLE, 231))
+                .withByAvailabilityReason(Map.of(AVAILABLE, 231))
+                .withByChannel(Map.of(NO_CHANNEL, 231))
                 .build();
-        assertThat(report).isEqualTo(ImmutableMap.of(BOOKED, bookedReport, FREE, freeReport));
+        assertThat(report).isEqualTo(Map.of(BOOKED, bookedReport, FREE, freeReport));
     }
 
     @Test
@@ -57,23 +55,23 @@ public class EventReportsSummaryTest extends SeatsioClientTest {
 
         EventReportSummaryItem seatReport = anEventReportSummaryItem()
                 .withCount(32)
-                .withBySection(ImmutableMap.of(NO_SECTION, 32))
-                .withByCategoryKey(ImmutableMap.of("9", 16, "10", 16))
-                .withByCategoryLabel(ImmutableMap.of("Cat1", 16, "Cat2", 16))
-                .withByAvailability(ImmutableMap.of(AVAILABLE, 32))
-                .withByAvailabilityReason(ImmutableMap.of(AVAILABLE, 32))
-                .withByChannel(ImmutableMap.of(NO_CHANNEL, 32))
-                .withByStatus(ImmutableMap.of(FREE, 32))
+                .withBySection(Map.of(NO_SECTION, 32))
+                .withByCategoryKey(Map.of("9", 16, "10", 16))
+                .withByCategoryLabel(Map.of("Cat1", 16, "Cat2", 16))
+                .withByAvailability(Map.of(AVAILABLE, 32))
+                .withByAvailabilityReason(Map.of(AVAILABLE, 32))
+                .withByChannel(Map.of(NO_CHANNEL, 32))
+                .withByStatus(Map.of(FREE, 32))
                 .build();
         EventReportSummaryItem generalAdmissionReport = anEventReportSummaryItem()
                 .withCount(200)
-                .withBySection(ImmutableMap.of(NO_SECTION, 200))
-                .withByCategoryKey(ImmutableMap.of("9", 100, "10", 100))
-                .withByCategoryLabel(ImmutableMap.of("Cat1", 100, "Cat2", 100))
-                .withByAvailability(ImmutableMap.of(AVAILABLE, 200))
-                .withByAvailabilityReason(ImmutableMap.of(AVAILABLE, 200))
-                .withByChannel(ImmutableMap.of(NO_CHANNEL, 200))
-                .withByStatus(ImmutableMap.of(FREE, 200))
+                .withBySection(Map.of(NO_SECTION, 200))
+                .withByCategoryKey(Map.of("9", 100, "10", 100))
+                .withByCategoryLabel(Map.of("Cat1", 100, "Cat2", 100))
+                .withByAvailability(Map.of(AVAILABLE, 200))
+                .withByAvailabilityReason(Map.of(AVAILABLE, 200))
+                .withByChannel(Map.of(NO_CHANNEL, 200))
+                .withByStatus(Map.of(FREE, 200))
                 .build();
         EventReportSummaryItem emptyReport = anEventReportSummaryItem()
                 .withCount(0)
@@ -85,7 +83,7 @@ public class EventReportsSummaryTest extends SeatsioClientTest {
                 .withByChannel(new HashMap<>())
                 .withByStatus(new HashMap<>())
                 .build();
-        assertThat(report).isEqualTo(ImmutableMap.of(
+        assertThat(report).isEqualTo(Map.of(
                 "seat", seatReport,
                 "generalAdmission", generalAdmissionReport,
                 "booth", emptyReport,
@@ -97,25 +95,25 @@ public class EventReportsSummaryTest extends SeatsioClientTest {
     public void summaryByCategoryKey() {
         String chartKey = createTestChart();
         Event event = client.events.create(chartKey);
-        client.events.book(event.key, newArrayList("A-1"));
+        client.events.book(event.key, List.of("A-1"));
 
         Map<String, EventReportSummaryItem> report = client.eventReports.summaryByCategoryKey(event.key);
 
         EventReportSummaryItem cat9Report = anEventReportSummaryItem()
                 .withCount(116)
-                .withBySection(ImmutableMap.of(NO_SECTION, 116))
-                .withByStatus(ImmutableMap.of(BOOKED, 1, FREE, 115))
-                .withByAvailability(ImmutableMap.of(AVAILABLE, 115, NOT_AVAILABLE, 1))
-                .withByAvailabilityReason(ImmutableMap.of(AVAILABLE, 115, BOOKED, 1))
-                .withByChannel(ImmutableMap.of(NO_CHANNEL, 116))
+                .withBySection(Map.of(NO_SECTION, 116))
+                .withByStatus(Map.of(BOOKED, 1, FREE, 115))
+                .withByAvailability(Map.of(AVAILABLE, 115, NOT_AVAILABLE, 1))
+                .withByAvailabilityReason(Map.of(AVAILABLE, 115, BOOKED, 1))
+                .withByChannel(Map.of(NO_CHANNEL, 116))
                 .build();
         EventReportSummaryItem cat10Report = anEventReportSummaryItem()
                 .withCount(116)
-                .withBySection(ImmutableMap.of(NO_SECTION, 116))
-                .withByStatus(ImmutableMap.of(FREE, 116))
-                .withByAvailability(ImmutableMap.of(AVAILABLE, 116))
-                .withByAvailabilityReason(ImmutableMap.of(AVAILABLE, 116))
-                .withByChannel(ImmutableMap.of(NO_CHANNEL, 116))
+                .withBySection(Map.of(NO_SECTION, 116))
+                .withByStatus(Map.of(FREE, 116))
+                .withByAvailability(Map.of(AVAILABLE, 116))
+                .withByAvailabilityReason(Map.of(AVAILABLE, 116))
+                .withByChannel(Map.of(NO_CHANNEL, 116))
                 .build();
         EventReportSummaryItem cat11Report = anEventReportSummaryItem()
                 .withCount(0)
@@ -133,7 +131,7 @@ public class EventReportsSummaryTest extends SeatsioClientTest {
                 .withByAvailabilityReason(new HashMap<>())
                 .withByChannel(new HashMap<>())
                 .build();
-        assertThat(report).isEqualTo(ImmutableMap.of(
+        assertThat(report).isEqualTo(Map.of(
                 "9", cat9Report,
                 "10", cat10Report,
                 "string11", cat11Report,
@@ -144,25 +142,25 @@ public class EventReportsSummaryTest extends SeatsioClientTest {
     public void summaryByCategoryLabel() {
         String chartKey = createTestChart();
         Event event = client.events.create(chartKey);
-        client.events.book(event.key, newArrayList("A-1"));
+        client.events.book(event.key, List.of("A-1"));
 
         Map<String, EventReportSummaryItem> report = client.eventReports.summaryByCategoryLabel(event.key);
 
         EventReportSummaryItem cat1Report = anEventReportSummaryItem()
                 .withCount(116)
-                .withBySection(ImmutableMap.of(NO_SECTION, 116))
-                .withByStatus(ImmutableMap.of(BOOKED, 1, FREE, 115))
-                .withByAvailability(ImmutableMap.of(AVAILABLE, 115, NOT_AVAILABLE, 1))
-                .withByAvailabilityReason(ImmutableMap.of(AVAILABLE, 115, BOOKED, 1))
-                .withByChannel(ImmutableMap.of(NO_CHANNEL, 116))
+                .withBySection(Map.of(NO_SECTION, 116))
+                .withByStatus(Map.of(BOOKED, 1, FREE, 115))
+                .withByAvailability(Map.of(AVAILABLE, 115, NOT_AVAILABLE, 1))
+                .withByAvailabilityReason(Map.of(AVAILABLE, 115, BOOKED, 1))
+                .withByChannel(Map.of(NO_CHANNEL, 116))
                 .build();
         EventReportSummaryItem cat2Report = anEventReportSummaryItem()
                 .withCount(116)
-                .withBySection(ImmutableMap.of(NO_SECTION, 116))
-                .withByStatus(ImmutableMap.of(FREE, 116))
-                .withByAvailability(ImmutableMap.of(AVAILABLE, 116))
-                .withByAvailabilityReason(ImmutableMap.of(AVAILABLE, 116))
-                .withByChannel(ImmutableMap.of(NO_CHANNEL, 116))
+                .withBySection(Map.of(NO_SECTION, 116))
+                .withByStatus(Map.of(FREE, 116))
+                .withByAvailability(Map.of(AVAILABLE, 116))
+                .withByAvailabilityReason(Map.of(AVAILABLE, 116))
+                .withByChannel(Map.of(NO_CHANNEL, 116))
                 .build();
         EventReportSummaryItem noCategoryReport = anEventReportSummaryItem()
                 .withCount(0)
@@ -180,7 +178,7 @@ public class EventReportsSummaryTest extends SeatsioClientTest {
                 .withByAvailabilityReason(new HashMap<>())
                 .withByChannel(new HashMap<>())
                 .build();
-        assertThat(report).isEqualTo(ImmutableMap.of(
+        assertThat(report).isEqualTo(Map.of(
                 "Cat1", cat1Report,
                 "Cat2", cat2Report,
                 "Cat3", cat3Report,
@@ -191,76 +189,76 @@ public class EventReportsSummaryTest extends SeatsioClientTest {
     public void summaryBySection() {
         String chartKey = createTestChart();
         Event event = client.events.create(chartKey);
-        client.events.book(event.key, newArrayList("A-1"));
+        client.events.book(event.key, List.of("A-1"));
 
         Map<String, EventReportSummaryItem> report = client.eventReports.summaryBySection(event.key);
 
         EventReportSummaryItem noSectionReport = anEventReportSummaryItem()
                 .withCount(232)
-                .withByStatus(ImmutableMap.of(BOOKED, 1, FREE, 231))
-                .withByCategoryKey(ImmutableMap.of("9", 116, "10", 116))
-                .withByCategoryLabel(ImmutableMap.of("Cat1", 116, "Cat2", 116))
-                .withByAvailability(ImmutableMap.of(AVAILABLE, 231, NOT_AVAILABLE, 1))
-                .withByAvailabilityReason(ImmutableMap.of(AVAILABLE, 231, BOOKED, 1))
-                .withByChannel(ImmutableMap.of(NO_CHANNEL, 232))
+                .withByStatus(Map.of(BOOKED, 1, FREE, 231))
+                .withByCategoryKey(Map.of("9", 116, "10", 116))
+                .withByCategoryLabel(Map.of("Cat1", 116, "Cat2", 116))
+                .withByAvailability(Map.of(AVAILABLE, 231, NOT_AVAILABLE, 1))
+                .withByAvailabilityReason(Map.of(AVAILABLE, 231, BOOKED, 1))
+                .withByChannel(Map.of(NO_CHANNEL, 232))
                 .build();
-        assertThat(report).isEqualTo(ImmutableMap.of(NO_SECTION, noSectionReport));
+        assertThat(report).isEqualTo(Map.of(NO_SECTION, noSectionReport));
     }
 
     @Test
     public void summaryByAvailability() {
         String chartKey = createTestChart();
         Event event = client.events.create(chartKey);
-        client.events.book(event.key, newArrayList("A-1"));
+        client.events.book(event.key, List.of("A-1"));
 
         Map<String, EventReportSummaryItem> report = client.eventReports.summaryByAvailability(event.key);
 
         EventReportSummaryItem availableReport = anEventReportSummaryItem()
                 .withCount(231)
-                .withBySection(ImmutableMap.of(NO_SECTION, 231))
-                .withByStatus(ImmutableMap.of(FREE, 231))
-                .withByCategoryKey(ImmutableMap.of("9", 115, "10", 116))
-                .withByCategoryLabel(ImmutableMap.of("Cat1", 115, "Cat2", 116))
-                .withByChannel(ImmutableMap.of(NO_CHANNEL, 231))
-                .withByAvailabilityReason(ImmutableMap.of(AVAILABLE, 231))
+                .withBySection(Map.of(NO_SECTION, 231))
+                .withByStatus(Map.of(FREE, 231))
+                .withByCategoryKey(Map.of("9", 115, "10", 116))
+                .withByCategoryLabel(Map.of("Cat1", 115, "Cat2", 116))
+                .withByChannel(Map.of(NO_CHANNEL, 231))
+                .withByAvailabilityReason(Map.of(AVAILABLE, 231))
                 .build();
         EventReportSummaryItem notAvailableReport = anEventReportSummaryItem()
                 .withCount(1)
-                .withBySection(ImmutableMap.of(NO_SECTION, 1))
-                .withByStatus(ImmutableMap.of(BOOKED, 1))
-                .withByCategoryKey(ImmutableMap.of("9", 1))
-                .withByCategoryLabel(ImmutableMap.of("Cat1", 1))
-                .withByChannel(ImmutableMap.of(NO_CHANNEL, 1))
-                .withByAvailabilityReason(ImmutableMap.of(BOOKED, 1))
+                .withBySection(Map.of(NO_SECTION, 1))
+                .withByStatus(Map.of(BOOKED, 1))
+                .withByCategoryKey(Map.of("9", 1))
+                .withByCategoryLabel(Map.of("Cat1", 1))
+                .withByChannel(Map.of(NO_CHANNEL, 1))
+                .withByAvailabilityReason(Map.of(BOOKED, 1))
                 .build();
-        assertThat(report).isEqualTo(ImmutableMap.of(AVAILABLE, availableReport, NOT_AVAILABLE, notAvailableReport));
+        assertThat(report).isEqualTo(Map.of(AVAILABLE, availableReport, NOT_AVAILABLE, notAvailableReport));
     }
 
     @Test
     public void summaryByAvailabilityReason() {
         String chartKey = createTestChart();
         Event event = client.events.create(chartKey);
-        client.events.book(event.key, newArrayList("A-1"));
+        client.events.book(event.key, List.of("A-1"));
 
         Map<String, EventReportSummaryItem> report = client.eventReports.summaryByAvailabilityReason(event.key);
 
         EventReportSummaryItem availableReport = anEventReportSummaryItem()
                 .withCount(231)
-                .withBySection(ImmutableMap.of(NO_SECTION, 231))
-                .withByStatus(ImmutableMap.of(FREE, 231))
-                .withByCategoryKey(ImmutableMap.of("9", 115, "10", 116))
-                .withByCategoryLabel(ImmutableMap.of("Cat1", 115, "Cat2", 116))
-                .withByChannel(ImmutableMap.of(NO_CHANNEL, 231))
-                .withByAvailability(ImmutableMap.of(AVAILABLE, 231))
+                .withBySection(Map.of(NO_SECTION, 231))
+                .withByStatus(Map.of(FREE, 231))
+                .withByCategoryKey(Map.of("9", 115, "10", 116))
+                .withByCategoryLabel(Map.of("Cat1", 115, "Cat2", 116))
+                .withByChannel(Map.of(NO_CHANNEL, 231))
+                .withByAvailability(Map.of(AVAILABLE, 231))
                 .build();
         EventReportSummaryItem bookedReport = anEventReportSummaryItem()
                 .withCount(1)
-                .withBySection(ImmutableMap.of(NO_SECTION, 1))
-                .withByStatus(ImmutableMap.of(BOOKED, 1))
-                .withByCategoryKey(ImmutableMap.of("9", 1))
-                .withByCategoryLabel(ImmutableMap.of("Cat1", 1))
-                .withByChannel(ImmutableMap.of(NO_CHANNEL, 1))
-                .withByAvailability(ImmutableMap.of(NOT_AVAILABLE, 1))
+                .withBySection(Map.of(NO_SECTION, 1))
+                .withByStatus(Map.of(BOOKED, 1))
+                .withByCategoryKey(Map.of("9", 1))
+                .withByCategoryLabel(Map.of("Cat1", 1))
+                .withByChannel(Map.of(NO_CHANNEL, 1))
+                .withByAvailability(Map.of(NOT_AVAILABLE, 1))
                 .build();
         EventReportSummaryItem emptyReport = anEventReportSummaryItem()
                 .withBySection(new HashMap<>())
@@ -270,7 +268,7 @@ public class EventReportsSummaryTest extends SeatsioClientTest {
                 .withByChannel(new HashMap<>())
                 .withByAvailability(new HashMap<>())
                 .build();
-        assertThat(report).isEqualTo(ImmutableMap.of(
+        assertThat(report).isEqualTo(Map.of(
                 AVAILABLE, availableReport,
                 BOOKED, bookedReport,
                 HELD, emptyReport,
@@ -283,30 +281,30 @@ public class EventReportsSummaryTest extends SeatsioClientTest {
     public void summaryByChannel() {
         String chartKey = createTestChart();
         Event event = client.events.create(chartKey, new CreateEventParams().withChannels(List.of(
-                new Channel("channel1", "channel 1", "#FFFF99", 1, newHashSet("A-1", "A-2"))
+                new Channel("channel1", "channel 1", "#FFFF99", 1, Set.of("A-1", "A-2"))
         )));
 
         Map<String, EventReportSummaryItem> report = client.eventReports.summaryByChannel(event.key);
 
         EventReportSummaryItem channel1Report = anEventReportSummaryItem()
                 .withCount(2)
-                .withBySection(ImmutableMap.of(NO_SECTION, 2))
-                .withByCategoryKey(ImmutableMap.of("9", 2))
-                .withByCategoryLabel(ImmutableMap.of("Cat1", 2))
-                .withByAvailability(ImmutableMap.of(AVAILABLE, 2))
-                .withByAvailabilityReason(ImmutableMap.of(AVAILABLE, 2))
-                .withByStatus(ImmutableMap.of(FREE, 2))
+                .withBySection(Map.of(NO_SECTION, 2))
+                .withByCategoryKey(Map.of("9", 2))
+                .withByCategoryLabel(Map.of("Cat1", 2))
+                .withByAvailability(Map.of(AVAILABLE, 2))
+                .withByAvailabilityReason(Map.of(AVAILABLE, 2))
+                .withByStatus(Map.of(FREE, 2))
                 .build();
         EventReportSummaryItem noChannelReport = anEventReportSummaryItem()
                 .withCount(230)
-                .withBySection(ImmutableMap.of(NO_SECTION, 230))
-                .withByCategoryKey(ImmutableMap.of("9", 114, "10", 116))
-                .withByCategoryLabel(ImmutableMap.of("Cat1", 114, "Cat2", 116))
-                .withByAvailability(ImmutableMap.of(AVAILABLE, 230))
-                .withByAvailabilityReason(ImmutableMap.of(AVAILABLE, 230))
-                .withByStatus(ImmutableMap.of(FREE, 230))
+                .withBySection(Map.of(NO_SECTION, 230))
+                .withByCategoryKey(Map.of("9", 114, "10", 116))
+                .withByCategoryLabel(Map.of("Cat1", 114, "Cat2", 116))
+                .withByAvailability(Map.of(AVAILABLE, 230))
+                .withByAvailabilityReason(Map.of(AVAILABLE, 230))
+                .withByStatus(Map.of(FREE, 230))
                 .build();
-        assertThat(report).isEqualTo(ImmutableMap.of("channel1", channel1Report, NO_CHANNEL, noChannelReport));
+        assertThat(report).isEqualTo(Map.of("channel1", channel1Report, NO_CHANNEL, noChannelReport));
     }
 
 }
